--- a/kpis/datos_escolares.html
+++ b/kpis/datos_escolares.html
@@ -340,12 +340,32 @@
                 apiKey: API_KEY,
                 discoveryDocs: ['https://sheets.googleapis.com/$discovery/rest?version=v4'],
             });
+            console.log("GAPI Client Inicializado."); // Log
             gapiInited = true;
             maybeEnableButtons();
         }
 
         async function loadSchoolList() {
+            console.log("Intentando cargar lista de escuelas..."); // Log
+
+            // ===== VERIFICACIÓN MEJORADA =====
+            let attempts = 0;
+            while ((typeof gapi === 'undefined' || !gapi?.client?.sheets?.spreadsheets) && attempts < 10) {
+                 console.warn(`gapi.client.sheets no está listo (intento ${attempts + 1}). Esperando 500ms...`);
+                 await new Promise(resolve => setTimeout(resolve, 500)); // Espera 500ms
+                 attempts++;
+            }
+
+            if (!gapi?.client?.sheets?.spreadsheets) {
+                 console.error("ERROR CRÍTICO: La API de Google Sheets no se inicializó después de varios intentos.");
+                 alert("Error: No se pudo conectar con la API de Google Sheets. Por favor, recarga la página.");
+                 document.getElementById('school-selector').innerHTML = '<option>Error de conexión API</option>';
+                 return; // Detiene la función si falla
+            }
+            // ===== FIN DE VERIFICACIÓN MEJORADA =====
+
             try {
+                console.log("API lista. Obteniendo datos de escuelas..."); // Log
                 const response = await gapi.client.sheets.spreadsheets.values.get({
                     spreadsheetId: MASTER_SHEET_ID,
                     range: 'Escuelas!A2:C',
@@ -373,7 +393,7 @@
                         }
                     });
                     schoolSelector.disabled = false;
-                    loginButton.disabled = true;
+                    loginButton.disabled = true; // Sigue deshabilitado hasta seleccionar
                     loginButton.classList.add('opacity-50', 'cursor-not-allowed');
 
                     schoolSelector.addEventListener('change', () => {
@@ -385,24 +405,42 @@
                             loginButton.classList.add('opacity-50', 'cursor-not-allowed');
                         }
                     });
-
                 } else {
                     schoolSelector.innerHTML = '<option>No se encontraron escuelas</option>';
                 }
-
             } catch (error) {
-                console.error("Error al cargar la lista de escuelas:", error);
+                console.error("Error DETALLADO al cargar la lista de escuelas:", error); // Log detallado
                 document.getElementById('school-selector').innerHTML = '<option>Error al cargar</option>';
-                alert("No se pudo cargar la lista de escuelas. Revisa que el ID de la Hoja Maestra y la Clave de API sean correctos y que la hoja sea pública.");
+                alert("No se pudo cargar la lista de escuelas. Revisa que el ID de la Hoja Maestra y la Clave de API sean correctos y que la hoja sea pública o compartida.");
             }
         }
 
+
         function maybeEnableButtons() {
+            console.log("Llamando a maybeEnableButtons. gapiInited:", gapiInited, "gisInited:", gisInited); // Log
             if (gapiInited && gisInited) {
                 loadSchoolList();
                 lucide.createIcons();
             }
         }
+
+        // --- El resto de las funciones (handleAuthClick, handleSignoutClick, sheetsArrayToJson, loadAndProcessData, processRealData, main, etc.) permanecen igual que en la versión anterior ---
+        // ... (Incluye aquí TODO el código JavaScript restante desde handleAuthClick hasta getDemoData, incluyendo las funciones actualizadas createEntregablesSection y getDemoData con formato DD-MM-AAAA) ...
+
+        // ===== Asegúrate de copiar AQUÍ todo el JavaScript restante que ya tenías =====
+        // Incluyendo:
+        // - handleAuthClick()
+        // - handleSignoutClick()
+        // - sheetsArrayToJson()
+        // - loadAndProcessData()
+        // - processRealData()
+        // - main()
+        // - Y todas las funciones auxiliares para gráficos, filtros, expediente, etc.
+        // - La función createEntregablesSection() que te proporcioné anteriormente (la que parsea DD-MM-AAAA)
+        // - La función getDemoData() actualizada con fechas DD-MM-AAAA
+
+
+        // === Inicio del código JavaScript restante (COPIAR Y PEGAR DESDE TU VERSIÓN ANTERIOR) ===
 
         function handleAuthClick() {
             const schoolSelector = document.getElementById('school-selector');
@@ -707,7 +745,6 @@
                 if(tablaBody) { tablaBody.innerHTML = ''; sesiones.forEach(s => { const row = `<tr class="hover:bg-gray-50"><td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">${s.sesion}</td><td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${s.titulo_sesion}</td><td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${s.fecha}</td><td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${s.asistentes} / ${s.esperados}</td><td class="px-6 py-4 whitespace-nowrap text-sm font-semibold text-gray-800">${s.porcentaje_asistencia.toFixed(1)}%</td></tr>`; tablaBody.innerHTML += row; }); }
             }
 
-            // ===== FUNCIÓN ENTREGABLES ACTUALIZADA PARA LEER DD-MM-AAAA =====
             function createEntregablesSection(data) {
                 const section = getEl('entregables');
                 if (!section) return;
@@ -721,38 +758,30 @@
                 hoy.setUTCHours(0, 0, 0, 0); // Usar UTC para comparar con fechas UTC
 
                 const entregables = data.entregables.map(e => {
-                    // --- Bloque Modificado para parsear DD-MM-AAAA ---
-                    const parts = String(e.FechaLimite).split('-'); // Asegurarse que es string
-                    let fechaObj = new Date(Date.UTC(1970, 0, 1)); // Fecha inicial si hay error
+                    const parts = String(e.FechaLimite).split('-');
+                    let fechaObj = new Date(Date.UTC(1970, 0, 1));
                     if (parts.length === 3) {
                         const day = parseInt(parts[0], 10);
-                        const month = parseInt(parts[1], 10) - 1; // Meses en JS son 0-11
+                        const month = parseInt(parts[1], 10) - 1;
                         const year = parseInt(parts[2], 10);
-                        // Verificar si los números son válidos
                         if (!isNaN(day) && !isNaN(month) && !isNaN(year) && month >= 0 && month <= 11 && day > 0 && day <= 31) {
-                             fechaObj = new Date(Date.UTC(year, month, day)); // Crear fecha en UTC
+                            fechaObj = new Date(Date.UTC(year, month, day));
                         } else {
-                             console.warn(`Fecha inválida encontrada en Entregables: ${e.FechaLimite}`);
+                            console.warn(`Fecha inválida encontrada en Entregables: ${e.FechaLimite}`);
                         }
                     } else {
-                         console.warn(`Formato de fecha inesperado en Entregables: ${e.FechaLimite}. Se esperaba DD-MM-AAAA.`);
+                        console.warn(`Formato de fecha inesperado en Entregables: ${e.FechaLimite}. Se esperaba DD-MM-AAAA.`);
                     }
-                    // --- Fin del Bloque Modificado ---
-
-                    return {
-                        ...e,
-                        fechaObj: fechaObj // Usa la fecha parseada
-                    };
-                }).filter(e => e.fechaObj && !isNaN(e.fechaObj) && e.fechaObj.getUTCFullYear() > 1970); // Filtrar fechas inválidas o la fecha inicial
+                    return { ...e, fechaObj: fechaObj };
+                }).filter(e => e.fechaObj && !isNaN(e.fechaObj) && e.fechaObj.getUTCFullYear() > 1970);
 
                 const futuros = entregables
-                    .filter(e => e.fechaObj >= hoy) // Comparar con 'hoy' en UTC
+                    .filter(e => e.fechaObj >= hoy)
                     .sort((a, b) => a.fechaObj - b.fechaObj);
 
-                const optionsCompleta = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric', timeZone: 'UTC' }; // Mostrar fecha en UTC
-                const optionsCorta = { month: 'short', day: 'numeric', timeZone: 'UTC' }; // Mostrar fecha corta en UTC
+                const optionsCompleta = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric', timeZone: 'UTC' };
+                const optionsCorta = { month: 'short', day: 'numeric', timeZone: 'UTC' };
 
-                // --- Tarjeta de Estadísticas (simple) ---
                 const proxEst = futuros.find(e => e.Categoria === 'Estadísticas');
                 const proxEstNombreEl = getEl('prox-estadistica-nombre');
                 const proxEstFechaEl = getEl('prox-estadistica-fecha');
@@ -768,7 +797,6 @@
                     proxEstFechaEl.className = "text-base font-medium text-gray-500 mt-1";
                 }
 
-                // --- Tarjeta de Planeación (simple) ---
                 const proxPlan = futuros.find(e => e.Categoria === 'Planeación');
                 const proxPlanNombreEl = getEl('prox-planeacion-nombre');
                 const proxPlanFechaEl = getEl('prox-planeacion-fecha');
@@ -784,7 +812,6 @@
                     proxPlanFechaEl.className = "text-base font-medium text-gray-500 mt-1";
                 }
 
-                // --- Tarjeta de Calificaciones (lista) ---
                 const listaCalContainer = getEl('prox-calificacion-lista');
                 const proxCals = futuros.filter(e => e.Categoria === 'Calificaciones').slice(0, 4);
                 if (listaCalContainer) {
@@ -803,7 +830,6 @@
                     }
                 }
 
-                // --- Poblar la Tabla Completa ---
                 const tablaBody = getEl('tabla-entregables-body');
                 if (!tablaBody) return;
                 tablaBody.innerHTML = '';
@@ -812,7 +838,7 @@
                     return;
                 }
                 futuros.forEach(e => {
-                    const fechaLimiteMedianoche = new Date(e.fechaObj); // Ya está en UTC
+                    const fechaLimiteMedianoche = new Date(e.fechaObj);
                     const diffTime = fechaLimiteMedianoche - hoy;
                     const diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
 
@@ -844,7 +870,7 @@
                 });
                 lucide.createIcons();
             }
-            // =============================================================
+
 
             periodFilter.addEventListener('change', (e) => updateSummary(e.target.value));
             if(gradeFilter) gradeFilter.addEventListener('change', e => { const selectedGrade = e.target.value; if (selectedGrade === 'Todos') { groupFilter.innerHTML = '<option value="Todos">Todos</option>'; groupFilter.disabled = true; } else { groupFilter.disabled = false; populateGroupFilter(selectedGrade); } updateCalificacionesGradoCharts(selectedGrade, groupFilter.value, blockFilter.value, genderFilterCal.value); });
@@ -869,7 +895,7 @@
             updateBoletosChart();
             setupExpedienteFilters();
             createAsistenciaPadresSection(data);
-            createEntregablesSection(data); // <-- LLAMADA A LA NUEVA FUNCIÓN
+            createEntregablesSection(data);
             manageVisibility();
         }
 
@@ -881,22 +907,23 @@
                 listaEstudiantes: [ { id: 1, clave_escolar: 'DEMO-001', nombre: "Ana García (Demo)", genero: "Femenino", grado: "1ro", grupo: "A", status: "activo", motivoBaja: null, bap: "Sí", asistencia: { 9: 98, 10: 95 }, calificaciones: { "Bloque 1": { m: 9.6, e: 9, c: 8, i: 9 }, "Bloque 2": { m: 9.8, e: 9, c: 8, i: 10 } }, boletos: { "Bloque 1": { Matemáticas: [{ date: "2025-09-18", score: 3 }] } } }, { id: 2, clave_escolar: 'DEMO-002', nombre: "Luis Rodríguez (Demo)", genero: "Masculino", grado: "1ro", grupo: "A", status: "activo", motivoBaja: null, bap: "No", asistencia: { 9: 95, 10: 100 }, calificaciones: { "Bloque 1": { m: 8.5, e: 9, c: 8, i: 9 }, "Bloque 2": { m: 9, e: 9, c: 9, i: 9 } }, boletos: {} } ],
                 docentes: { altas: [2, 1, 3, 1, 0, 1], bajas: [1, 0, 1, 0, 1, 0], meses: ["Mar", "Abr", "May", "Jun", "Jul", "Ago"] },
                 calificaciones: { matematicas: [8.2, 7.9], espanol: [8.8, 8.5], ciencias: [7.5, 8], ingles: [9, 9.2], bloques: ["Bloque 1", "Bloque 2"] },
-                asistenciaPadres: [ { sesion: 1, porcentaje_asistencia: 85.0, fecha: "15-09-2025", titulo_sesion: "Crianza Positiva (Demo)", esperados: 200, asistentes: 170 }, { sesion: 2, porcentaje_asistencia: 92.5, fecha: "20-10-2025", titulo_sesion: "Seguridad en Internet (Demo)", esperados: 200, asistentes: 185 }, { sesion: 3, porcentaje_asistencia: 80.0, fecha: "18-11-2025", titulo_sesion: "Apoyo en Tareas (Demo)", esperados: 200, asistentes: 160 } ], // Fechas de padres también pueden necesitar ajuste
+                asistenciaPadres: [ { sesion: 1, porcentaje_asistencia: 85.0, fecha: "15-09-2025", titulo_sesion: "Crianza Positiva (Demo)", esperados: 200, asistentes: 170 }, { sesion: 2, porcentaje_asistencia: 92.5, fecha: "20-10-2025", titulo_sesion: "Seguridad en Internet (Demo)", esperados: 200, asistentes: 185 }, { sesion: 3, porcentaje_asistencia: 80.0, fecha: "18-11-2025", titulo_sesion: "Apoyo en Tareas (Demo)", esperados: 200, asistentes: 160 } ],
                 estudiantes: {meses: ["Agosto", "Septiembre"], matricula: [450, 452]},
-                // ===== DATOS DEMO PARA ENTREGABLES (ACTUALIZADOS A DD-MM-AAAA) =====
                 entregables: [
                     { Categoria: "Estadísticas", NombreEntregable: "Reporte Asistencia Sep (Demo)", FechaLimite: "05-10-2025" },
-                    { Categoria: "Calificaciones", NombreEntregable: "Carga Mat B1 (Demo)", FechaLimite: "18-10-2025" }, // ¡Hoy!
-                    { Categoria: "Calificaciones", NombreEntregable: "Carga Esp B1 (Demo)", FechaLimite: "19-10-2025" }, // Mañana
+                    { Categoria: "Calificaciones", NombreEntregable: "Carga Mat B1 (Demo)", FechaLimite: "18-10-2025" },
+                    { Categoria: "Calificaciones", NombreEntregable: "Carga Esp B1 (Demo)", FechaLimite: "19-10-2025" },
                     { Categoria: "Calificaciones", NombreEntregable: "Carga Cie B1 (Demo)", FechaLimite: "20-10-2025" },
                     { Categoria: "Calificaciones", NombreEntregable: "Carga Ing B1 (Demo)", FechaLimite: "21-10-2025" },
                     { Categoria: "Planeación", NombreEntregable: "Entrega Plan Nov (Demo)", FechaLimite: "28-10-2025" },
                     { Categoria: "Estadísticas", NombreEntregable: "Reporte Asistencia Oct (Demo)", FechaLimite: "05-11-2025" },
                      { Categoria: "Calificaciones", NombreEntregable: "Carga Mat B2 (Demo)", FechaLimite: "15-12-2025" }
                 ]
-                // ===================================================================
             };
         }
+
+    // === Fin del código JavaScript ===
+
     </script>
 </body>
 </html>
