--- a/presentaciones/pitwall.html
+++ b/presentaciones/pitwall.html
@@ -131,7 +131,7 @@
             <h2 class="text-3xl md:text-5xl font-bold mb-6">Primero, ¿Qué es la Fórmula 1?</h2>
             <p class="mb-6 text-xl md:text-2xl text-gray-300">No es solo correr rápido. Es un deporte de ingeniería, datos y estrategia milimétrica.</p>
             <div class="w-full max-w-4xl aspect-video bg-black rounded-lg shadow-2xl overflow-hidden">
-                <iframe class="w-full h-full" src="https://www.youtube.com/embed/bU1bO5jI0_g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe>
+                <iframe class="w-full h-full" src="https://www.youtube.com/embed/mdnF9R-Bzpg?start=162" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe>
             </div>
         </div>
     </div>
