--- a/kpis/datos_escolares.html
+++ b/kpis/datos_escolares.html
@@ -427,16 +427,16 @@
                             </div>
                         </div>
 
-                        <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
-                            <div class="bg-white p-6 rounded-xl shadow-md">
-                                <h3 class="font-bold text-lg text-gray-700">Asistencia por Sesión</h3>
-                                <canvas id="asistenciaPadresChart" class="mt-4"></canvas>
-                            </div>
-                            <div class="bg-white p-6 rounded-xl shadow-md">
-                                <h3 class="font-bold text-lg text-gray-700">Tendencia de Asistencia</h3>
-                                <canvas id="asistenciaPadresTrendChart" class="mt-4"></canvas>
-                            </div>
-                        </div>
+                        <div class="grid grid-cols-1 gap-6">
+                            <div class="bg-white p-6 rounded-xl shadow-md">
+                                <h3 class="font-bold text-lg text-gray-700">Asistencia por Sesión (Porcentaje)</h3>
+                                <canvas id="asistenciaPadresChart" class="mt-4"></canvas>
+                            </div>
+                            <div class="bg-white p-6 rounded-xl shadow-md">
+                                <h3 class="font-bold text-lg text-gray-700">Análisis de Convocatoria (Personas)</h3>
+                                <canvas id="asistenciaPadresConvocatoriaChart" class="mt-4"></canvas>
+                            </div>
+                        </div>
 
                         <div class="bg-white p-6 rounded-xl shadow-md">
                             <h3 class="font-bold text-lg text-gray-700 mb-4">Detalle de Sesiones</h3>
@@ -1102,9 +1102,49 @@
                 peorSesionEl.textContent = `${peorSesion.titulo_sesion} (${peorSesion.porcentaje_asistencia.toFixed(1)}%)`;
                 peorSesionEl.title = `${peorSesion.titulo_sesion} (${peorSesion.porcentaje_asistencia.toFixed(1)}%)`;
                 const barChartCanvas = getEl('asistenciaPadresChart');
-                if (barChartCanvas) { if (barChartCanvas.chart) barChartCanvas.chart.destroy(); barChartCanvas.chart = new Chart(barChartCanvas, { type: 'bar', data: { labels: sesiones.map(s => `Sesión ${s.sesion}: ${s.titulo_sesion}`), datasets: [{ label: '% de Asistencia', data: sesiones.map(s => s.porcentaje_asistencia), backgroundColor: 'rgba(20, 184, 166, 0.7)', borderColor: 'rgba(15, 118, 110, 1)', borderWidth: 1 }] }, options: { responsive: true, scales: { y: { beginAtZero: false, min: 50, max: 100, ticks: { callback: (val) => val + '%' } } }, plugins: { legend: { display: false }, tooltip: { callbacks: { afterLabel: function(context) { const sesionData = sesiones[context.dataIndex]; return `Fecha: ${sesionData.fecha}\n${sesionData.asistentes} de ${sesionData.esperados} padres asistieron.`; } } } } } }); }
-                const trendChartCanvas = getEl('asistenciaPadresTrendChart');
-                if (trendChartCanvas) { if (trendChartCanvas.chart) trendChartCanvas.chart.destroy(); trendChartCanvas.chart = new Chart(trendChartCanvas, { type: 'bar', data: { labels: sesiones.map(s => `Sesión ${s.sesion}`), datasets: [{ label: 'Tendencia de Asistencia (%)', data: sesiones.map(s => s.porcentaje_asistencia), backgroundColor: 'rgba(59, 130, 246, 0.7)', borderColor: 'rgba(59, 130, 246, 1)', borderWidth: 1 }] }, options: { responsive: true, scales: { y: { beginAtZero: false, min: 50, max: 100, ticks: { callback: (val) => val + '%' } } }, plugins: { legend: { display: false } } } }); }
+                if (barChartCanvas) { if (barChartCanvas.chart) barChartCanvas.chart.destroy(); barChartCanvas.chart = new Chart(barChartCanvas, { type: 'bar', data: { labels: sesiones.map(s => `Sesión ${s.sesion}`), datasets: [{ label: '% de Asistencia', data: sesiones.map(s => s.porcentaje_asistencia), backgroundColor: 'rgba(20, 184, 166, 0.7)', borderColor: 'rgba(15, 118, 110, 1)', borderWidth: 1 }] }, options: { responsive: true, scales: { y: { beginAtZero: false, min: 50, max: 100, ticks: { callback: (val) => val + '%' } } }, plugins: { legend: { display: false }, tooltip: { callbacks: { afterLabel: function(context) { const sesionData = sesiones[context.dataIndex]; return `Fecha: ${sesionData.fecha}\n${sesionData.asistentes} de ${sesionData.esperados} padres asistieron.`; } } } } } }); }
+                // GRÁFICO REEMPLAZADO: Análisis de Convocatoria (Asistentes vs. Esperados)
+            const convocatoriaChartCanvas = getEl('asistenciaPadresConvocatoriaChart');
+            if (convocatoriaChartCanvas) {
+                if (convocatoriaChartCanvas.chart) convocatoriaChartCanvas.chart.destroy();
+                convocatoriaChartCanvas.chart = new Chart(convocatoriaChartCanvas, {
+                    type: 'bar',
+                    data: {
+                        labels: sesiones.map(s => `Sesión ${s.sesion}`), // Etiquetas cortas (Sesión 1, Sesión 2...)
+                        datasets: [
+                            {
+                                label: 'Esperados',
+                                data: sesiones.map(s => s.esperados), // Datos de padres esperados
+                                backgroundColor: 'rgba(54, 162, 235, 0.6)', // Azul
+                                borderColor: 'rgba(54, 162, 235, 1)',
+                                borderWidth: 1
+                            },
+                            {
+                                label: 'Asistentes',
+                                data: sesiones.map(s => s.asistentes), // Datos de padres que asistieron
+                                backgroundColor: 'rgba(75, 192, 192, 0.6)', // Verde/Teal
+                                borderColor: 'rgba(75, 192, 192, 1)',
+                                borderWidth: 1
+                            }
+                        ]
+                    },
+                    options: {
+                        responsive: true,
+                        scales: {
+                            y: {
+                                beginAtZero: true, // Empezar en 0
+                                title: {
+                                    display: true,
+                                    text: 'Número de Personas' // Título del eje Y
+                                }
+                            }
+                        },
+                        plugins: {
+                            legend: { display: true, position: 'top' } // Mostrar la leyenda (Asistentes/Esperados)
+                        }
+                    }
+                });
+            }
                 const tablaBody = getEl('padres-sesiones-tabla');
                 if(tablaBody) { tablaBody.innerHTML = ''; sesiones.forEach(s => { const row = `<tr class="hover:bg-gray-50"><td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">${s.sesion}</td><td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${s.titulo_sesion}</td><td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${s.fecha}</td><td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${s.asistentes} / ${s.esperados}</td><td class="px-6 py-4 whitespace-nowrap text-sm font-semibold text-gray-800">${s.porcentaje_asistencia.toFixed(1)}%</td></tr>`; tablaBody.innerHTML += row; }); }
             }
