--- a/kpis/datos_escolares.html
+++ b/kpis/datos_escolares.html
@@ -75,7 +75,7 @@
 
             <a href="#" class="text-white flex flex-col items-center space-y-2 px-4">
                 <img src="https://lh3.googleusercontent.com/d/1Dlnf947o9B3ISYf5ylfCSe7XOYl5BRqn" alt="Logo Plataforma" class="h-12 w-auto object-contain">
-                <span class="text-2xl font-extrabold">Datos Escolares</span>
+                <span class="text-2xl font-extrabold whitespace-nowrap">Datos Escolares</span>
             </a>
 
             <nav id="main-nav">
