--- a/dinamica/deseos.html
+++ b/dinamica/deseos.html
@@ -103,7 +103,7 @@
     <div class="max-w-4xl mx-auto bg-white p-6 sm:p-10 rounded-2xl shadow-xl">
         <header class="text-center mb-8">
             <h1 class="text-4xl font-extrabold text-gray-800 mb-2">
-                🎉 Mis 9 Deseos de Fin de Año ✨
+                🌟 La Magia de la Navidad 🎁
             </h1>
             <p class="text-xl text-gray-500">
                 Presiona cada carta para revelar un deseo. ¡Vuelve a presionarla para marcarla como vista y desaparecer!
