--- a/dinamica/deseos.html
+++ b/dinamica/deseos.html
@@ -67,9 +67,16 @@
             text-align: center;
         }
 
+        /* Estilo base para la cara frontal (Rojo) */
         .card-front {
             background-color: var(--color-primary);
             color: white;
+            border: 4px solid var(--color-accent);
+        }
+
+        /* NUEVO ESTILO: Cara frontal alternativa (Verde) */
+        .alternate-front {
+            background-color: var(--color-secondary); /* Verde Pino */
             border: 4px solid var(--color-accent);
         }
 
@@ -227,6 +234,15 @@
                 // ------------------ Cara Frontal (Icono) ------------------
                 const cardFront = document.createElement('div');
                 cardFront.className = 'card-face card-front';
+                
+                // Determinar el color alterno: para las cartas 2, 4, 6, 8 (índices 1, 3, 5, 7)
+                // Usamos el índice + 1 (posición secuencial) para verificar si es par
+                if ((index + 1) % 2 === 0) {
+                    cardFront.classList.add('alternate-front');
+                } else {
+                    // Si no es alterno (impar), se mantiene el estilo 'card-front' (rojo)
+                }
+
                 // Usamos el icono de la lista final, que garantiza la estrella en el índice 3
                 cardFront.innerHTML = `
                     <div class="text-7xl">${finalIcons[index]}</div>
